# DsLauncherUI

./: .gitignore  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  Guard.jsx  Protected.jsx  Router.jsx  TitleBar.jsx  data.js  main.jsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: cache.rs  main.rs
src-tauri/src/cache/: db.rs  error.rs  mod.rs
src-tauri/src/cache/commands/: get_item.rs  get_items.rs  mod.rs
src-tauri/src/cache/data_providers/: currency_data_provider.rs  data_provider.rs  developer_data_provider.rs  mod.rs  product_data_provider.rs  tag_data_provider.rs  tag_group_data_provider.rs  user_data_provider.rs
src-tauri/src/cache/models/: currency.rs  developer.rs  item.rs  mod.rs  product.rs  tag.rs  tag_group.rs  user.rs
src-tauri/src/clients/: core_client.rs  error.rs  launcher_client.rs  mod.rs  ndib_client.rs  utils.rs
src-tauri/src/configuration/: env_var.rs  error.rs  mod.rs  remote_var.rs  remote_vars.rs
src-tauri/src/configuration/commands/: get_env.rs  get_remote_vars.rs  mod.rs
src-tauri/src/launcher_service/: error.rs  mod.rs  websocket_manager.rs
src-tauri/src/launcher_service/commands/: execute.rs  mod.rs
src-tauri/src/launcher_service/models/: array_info.rs  command.rs  command_args.rs  command_result.rs  listener.rs  mod.rs  websocket_state.rs
src-tauri/src/ndib/: error.rs  mod.rs
src-tauri/src/ndib/commands/: add.rs  get_repositories.rs  get_repository_files.rs  get_repository_metadata.rs  init.rs  mod.rs  publish.rs  pull.rs  remove.rs  save.rs  update_metadata.rs
src-tauri/src/ndib/helpers/: consts.rs  mod.rs  utils.rs  vec_extensions.rs
src-tauri/src/ndib/models/: content_classification.rs  mod.rs  ndib_data.rs  product_type.rs
src-tauri/src/session_data/: error.rs  keys.rs  mod.rs  store.rs
src-tauri/src/session_data/commands/: get_session_value.rs  mod.rs  set_session_value.rs
src-tauri/src/utility/: mod.rs  read_file_as_base64.rs
src/assets/: data.js
src/components/: AspectRatio.jsx  DiscoverSliderContent.jsx  Logo.jsx  NavBar.jsx  NavButton.jsx  NewsEntry.jsx  RecentApp.jsx  SliderContainer.jsx  SliderControls.jsx  SliderPage.jsx  Spacer.jsx  StoreEntry.jsx  TitleBar.jsx  UpdateSummary.jsx  UserButton.jsx
src/components/aspect-ratio/: AspectRatio.jsx  AspectRatio.scss
src/components/carousel/: Carousel.jsx  Carousel.scss  CarouselControls.jsx  CarouselItem.jsx
src/components/collapsed-area/: CollapsedArea.jsx  CollapsedArea.scss
src/components/combo-box/: ComboBox.jsx  ComboBox.scss
src/components/dialog/: Dialog.jsx  Dialog.scss
src/components/dropdown/: Dropdown.jsx  Dropdown.scss
src/components/info-bar/: InfoBar.jsx  InfoBar.scss
src/components/installer/: Installer.jsx  Installer.scss
src/components/library-selector/: LibrarySelector.jsx  LibrarySelector.scss
src/components/logo/: Logo.jsx  (+1 more)
src/contexts/: SettingsContextProvider.jsx  UserContextProvider.jsx
src/hooks/: useFileDialog.js  useOwnedProducts.js  useProfileImage.js  useScrolledToEnd.js  useServiceListener.js  useSettings.js  useVersions.js
src/pages/: index.js
src/routes/: AppsPage.jsx  DiscoverPage.jsx  GamesPage.jsx  HomePage.jsx  LibraryPage.jsx  MainPage.jsx  StorePage.jsx
src/services/: ApiClient.js  Base64Service.js  CLIClient.js  CacheService.js  ConfigurationService.js  DownloadHandler.js  DsAuthApiClient.js  DsCoreApiClient.js  DsIdentityApiClient.js  DsLauncherApiClient.js  DsLauncherService.js  DsLauncherServiceClient.js  DsNdibcoinApiClient.js  DsStorageApiClient.js  LocalStorageService.js  NdibService.js  NdibverFileHandler.js  PathResolver.js  PlayingService.js  ProfileImageService.js  SessionDataService.js  SettingsService.js  UpdateMonitorService.js  Utility.js  getFilesData.js  getToken.js  supabase.js
src/styles/: App.scss  TitleBar.scss  UserButton.scss  _index.scss  _inputs.scss  _mixins.scss  _variables.scss
(+263 files in other folders)
