[package]
name = "dibstore-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.66"
glob = "0.3"
base64 = "0.13"
zip = "0.5"
walkdir = "2.3"
uuid = "1.11"
once_cell = "1.20.2"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.41", features = ["full"] }
regex = "1.11.1"
tungstenite = "0.24"
futures-util = "0.3.31"
tokio-tungstenite = "0.24.0"
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.0"
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-websocket = "2.0.0-rc.0"
tauri-plugin-process = "2.0.0-rc.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.0.0-beta.4"
