[package]
name = "dibstore-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
glob = "0.3.2"
base64 = "0.22.1"
zip = "2.2.2"
walkdir = "2.3"
uuid = "1.13.2"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
tokio = { version = "1.43.0", features = ["full"] }
regex = "1.11.1"
tungstenite = "0.26.2"
futures = "0.3.17"
futures-util = "0.3.31"
tokio-tungstenite = "0.26.2"
surrealdb = { version = "2.2.1", features = ["kv-mem"] }
dotenv = "0.15"
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-websocket = "2.3.0"
tauri-plugin-process = "2.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.2.0"
